lab_03/doc/bnf.txt
prog : (decl-stmt | expr-stmt)*
decl-stmt : "int" identifier ("," identifier (= expr)?)* ";"
expr-stmt : expr? ";"
expr : assign-expr | add-expr
assign-expr: identifier "=" expr
add-expr : mult-expr (("+" | "-") mult-expr)* 
mult-expr : primary-expr (("*" | "/") primary-expr)* 
primary-expr : identifier | number | "(" expr ")" 
number: ([0-9])+ 
identifier : (a-zA-Z_)(a-zA-Z0-9_)*
